--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@ body {
   color: #000 !important;
 }
 
+
 .carousel-indicators button {
   border-radius: 50%;
   width: 10px !important;
@@ -86,10 +87,14 @@ body {
 .imgs {
   color: #595971;
 }
+
+
 .back {
   background-image: url(images/back.png);
   object-fit: cover;
   background-size: cover;
+  width: 100%;
+  height: 100%;
   min-height: 480px;
   background-repeat: no-repeat;
   background-position: center;
@@ -213,10 +218,11 @@ body {
   font-size: 15px;
 }
 #input{
-  max-width: 190px;
+  max-width: 100%;
   height: 60px;
 }
 #input1{
+  width: 100%;
   max-width: 120px;
   height: 44px;
   background-color: #dc3546;
